--- a/templates/news-edit.html
+++ b/templates/news-edit.html
@@ -11,20 +11,21 @@
 <div class="row">&nbsp;</div>
 <div class="row">
     <div class="col-md-8 col-md-offset-2 ">
-        <h3 class="Yekan" style="color:#2233dd">ویرایش نویسنده ... </h3>
-          <form method="post" action="/author/edit/{{author.id}}">
+        <h3 class="Yekan" style="color:#2233dd">ویرایش خبر...</h3>
+          <form method="post" action="/news/edit/{{news.id}}">
 
           <div class="form-group">
-            <label for="author-id" class="control-label Mitra" >شناسه نویسنده </label>
-            <input type="text" name="author-id" value="{{author.id}}" id="author-id" class="form-control" readonly="readonly"/>
+            <label for="id" class="control-label Mitra" >شناسه خبر</label>
+            <input type="text" name="id" value="{{news.id}}" id="id" class="form-control" readonly="readonly"/>
 
           </div>
 
 
           <div class="form-group">
-            <label for="fn" class="control-label Mitra" >نام گروه :</label>
-            <input type="text" name="fn" id="fn" value="{{author.fn}}" class="form-control" />
-            <input type="text" name="ln" id="ln" value="{{author.ln}}" class="form-control" />
+            <label for="title" class="control-label Mitra" >عنوان خبر...</label>
+            <input type="text" name="title" id="title" value="{{news.title}}" class="form-control" />
+            <input type="text" name="body" id="body" value="{{news.body}}" class="form-control" />
+            <input type="date" name="date" id="date" value="{{news.date}}" class="form-control" />
 
           </div>
 
