--- a/templates/news-new.html
+++ b/templates/news-new.html
@@ -11,28 +11,20 @@
 <div class="row">&nbsp;</div>
 <div class="row">
     <div class="col-md-8 col-md-offset-2 ">
-        <h3 class="Yekan" style="color:#2233dd">ویرایش نویسنده ... </h3>
-          <form method="post" action="/author/edit/{{author.id}}">
+        <h3 class="Yekan" style="color:#2233dd">اخبار گروه خبری...</h3>
+          <form method="post" action="/news/new/{{category.id}}">
 
           <div class="form-group">
-            <label for="author-id" class="control-label Mitra" >شناسه نویسنده </label>
-            <input type="text" name="author-id" value="{{author.id}}" id="author-id" class="form-control" readonly="readonly"/>
-
-          </div>
-
-
-          <div class="form-group">
-            <label for="fn" class="control-label Mitra" >نام گروه :</label>
-            <input type="text" name="fn" id="fn" value="{{author.fn}}" class="form-control" />
-            <input type="text" name="ln" id="ln" value="{{author.ln}}" class="form-control" />
+            <!--<label for="category-name" class="control-label Mitra" >نام گروه :</label>-->
+            <input type="text" name="news-title" id="news-title" value="" placeholder="عنوان خبر..."      class="form-control" />
+			<input type="text" name="news-body" id="news-body" value="" placeholder="متن خبر..."      class="form-control" />
+			<input type="date" name="news-date" id="news-date" value="" placeholder="تاریخ ایجاد خبر"      class="form-control" />
 
           </div>
 
 
         <input type="submit" class="btn btn-primary Yekan" value="ذخیره تغییرات" >
-
-
-              </form>
+          </form>
     </div>
 </div>
 
